--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
 		"@types/chai": "5.0.1",
 		"@types/history": "5.0.0",
 		"@types/jest": "29.5.14",
+		"@types/lodash": "^4.17.15",
 		"@types/react": "19.0.8",
 		"@types/react-collapse": "5.0.4",
 		"@types/react-dom": "19.0.3",
