--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
 		"@types/react-redux": "7.1.34",
 		"@typescript-eslint/eslint-plugin": "8.33.0",
 		"@typescript-eslint/parser": "8.33.0",
+		"@vitejs/plugin-react": "^4.5.2",
 		"autoprefixer": "10.4.21",
 		"babel-eslint": "10.1.0",
 		"babel-jest": "29.7.0",
@@ -178,37 +179,38 @@
 		"terser-webpack-plugin": "5.3.14",
 		"thread-loader": "4.0.4",
 		"typescript": "5.8.3",
+		"vite": "^6.3.5",
 		"webpack": "5.99.9",
 		"webpack-cli": "6.0.1",
 		"webpack-dev-server": "5.2.1",
 		"webpack-merge": "6.0.1"
 	},
 	"resolutions": {
-		"nav-frontend-alertstriper@4.0.2": "patch:nav-frontend-alertstriper@npm%3A4.0.2#./.yarn/patches/nav-frontend-alertstriper-npm-4.0.2-b212c92a4c.patch",
-		"nav-frontend-chevron@1.0.30": "patch:nav-frontend-chevron@npm%3A1.0.30#./.yarn/patches/nav-frontend-chevron-npm-1.0.30-1fbba039a5.patch",
-		"nav-frontend-ekspanderbartpanel@4.0.4": "patch:nav-frontend-ekspanderbartpanel@npm%3A4.0.4#./.yarn/patches/nav-frontend-ekspanderbartpanel-npm-4.0.4-343a9004ea.patch",
-		"nav-frontend-etiketter@3.0.3": "patch:nav-frontend-etiketter@npm%3A3.0.3#./.yarn/patches/nav-frontend-etiketter-npm-3.0.3-509c94aa5d.patch",
-		"nav-frontend-grid@2.0.2": "patch:nav-frontend-grid@npm%3A2.0.2#./.yarn/patches/nav-frontend-grid-npm-2.0.2-a14357d0a8.patch",
-		"nav-frontend-hjelpetekst@3.1.3": "patch:nav-frontend-hjelpetekst@npm%3A3.1.3#./.yarn/patches/nav-frontend-hjelpetekst-npm-3.1.3-f2edad701c.patch",
-		"nav-frontend-knapper@3.1.3": "patch:nav-frontend-knapper@npm%3A3.1.3#./.yarn/patches/nav-frontend-knapper-npm-3.1.3-f1d93117df.patch",
-		"nav-frontend-lenkepanel@2.0.2": "patch:nav-frontend-lenkepanel@npm%3A2.0.2#./.yarn/patches/nav-frontend-lenkepanel-npm-2.0.2-c191f8e773.patch",
-		"nav-frontend-lenker@2.0.2": "patch:nav-frontend-lenker@npm%3A2.0.2#./.yarn/patches/nav-frontend-lenker-npm-2.0.2-f01a3f3c03.patch",
-		"nav-frontend-lukknapp@2.0.2": "patch:nav-frontend-lukknapp@npm%3A2.0.2#./.yarn/patches/nav-frontend-lukknapp-npm-2.0.2-fa6e0532f9.patch",
-		"nav-frontend-modal@2.0.2": "patch:nav-frontend-modal@npm%3A2.0.2#./.yarn/patches/nav-frontend-modal-npm-2.0.2-ff97011d36.patch",
-		"nav-frontend-paneler@3.0.2": "patch:nav-frontend-paneler@npm%3A3.0.2#./.yarn/patches/nav-frontend-paneler-npm-3.0.2-45502b626d.patch",
-		"nav-frontend-popover@2.0.4": "patch:nav-frontend-popover@npm%3A2.0.4#./.yarn/patches/nav-frontend-popover-npm-2.0.4-5118064ee1.patch",
-		"nav-frontend-skjema@4.0.6": "patch:nav-frontend-skjema@npm%3A4.0.6#./.yarn/patches/nav-frontend-skjema-npm-4.0.6-34e6189688.patch",
-		"nav-frontend-snakkeboble@3.0.2": "patch:nav-frontend-snakkeboble@npm%3A3.0.2#./.yarn/patches/nav-frontend-snakkeboble-npm-3.0.2-ebcb5dd2db.patch",
-		"nav-frontend-spinner@3.0.1": "patch:nav-frontend-spinner@npm%3A3.0.1#./.yarn/patches/nav-frontend-spinner-npm-3.0.1-e8209cee75.patch",
-		"nav-frontend-tabs@2.0.3": "patch:nav-frontend-tabs@npm%3A2.0.3#./.yarn/patches/nav-frontend-tabs-npm-2.0.3-3d1b6739cc.patch",
+		"nav-frontend-alertstriper@4.0.2": "patch:nav-frontend-alertstriper@npm%3A4.0.2#~/.yarn/patches/nav-frontend-alertstriper-npm-4.0.2-b212c92a4c.patch",
+		"nav-frontend-chevron@1.0.30": "patch:nav-frontend-chevron@npm%3A1.0.30#~/.yarn/patches/nav-frontend-chevron-npm-1.0.30-1fbba039a5.patch",
+		"nav-frontend-ekspanderbartpanel@4.0.4": "patch:nav-frontend-ekspanderbartpanel@npm%3A4.0.4#~/.yarn/patches/nav-frontend-ekspanderbartpanel-npm-4.0.4-343a9004ea.patch",
+		"nav-frontend-etiketter@3.0.3": "patch:nav-frontend-etiketter@npm%3A3.0.3#~/.yarn/patches/nav-frontend-etiketter-npm-3.0.3-509c94aa5d.patch",
+		"nav-frontend-grid@2.0.2": "patch:nav-frontend-grid@npm%3A2.0.2#~/.yarn/patches/nav-frontend-grid-npm-2.0.2-a14357d0a8.patch",
+		"nav-frontend-hjelpetekst@3.1.3": "patch:nav-frontend-hjelpetekst@npm%3A3.1.3#~/.yarn/patches/nav-frontend-hjelpetekst-npm-3.1.3-f2edad701c.patch",
+		"nav-frontend-knapper@3.1.3": "patch:nav-frontend-knapper@npm%3A3.1.3#~/.yarn/patches/nav-frontend-knapper-npm-3.1.3-f1d93117df.patch",
+		"nav-frontend-lenkepanel@2.0.2": "patch:nav-frontend-lenkepanel@npm%3A2.0.2#~/.yarn/patches/nav-frontend-lenkepanel-npm-2.0.2-c191f8e773.patch",
+		"nav-frontend-lenker@2.0.2": "patch:nav-frontend-lenker@npm%3A2.0.2#~/.yarn/patches/nav-frontend-lenker-npm-2.0.2-f01a3f3c03.patch",
+		"nav-frontend-lukknapp@2.0.2": "patch:nav-frontend-lukknapp@npm%3A2.0.2#~/.yarn/patches/nav-frontend-lukknapp-npm-2.0.2-fa6e0532f9.patch",
+		"nav-frontend-modal@2.0.2": "patch:nav-frontend-modal@npm%3A2.0.2#~/.yarn/patches/nav-frontend-modal-npm-2.0.2-ff97011d36.patch",
+		"nav-frontend-paneler@3.0.2": "patch:nav-frontend-paneler@npm%3A3.0.2#~/.yarn/patches/nav-frontend-paneler-npm-3.0.2-45502b626d.patch",
+		"nav-frontend-popover@2.0.4": "patch:nav-frontend-popover@npm%3A2.0.4#~/.yarn/patches/nav-frontend-popover-npm-2.0.4-5118064ee1.patch",
+		"nav-frontend-skjema@4.0.6": "patch:nav-frontend-skjema@npm%3A4.0.6#~/.yarn/patches/nav-frontend-skjema-npm-4.0.6-34e6189688.patch",
+		"nav-frontend-snakkeboble@3.0.2": "patch:nav-frontend-snakkeboble@npm%3A3.0.2#~/.yarn/patches/nav-frontend-snakkeboble-npm-3.0.2-ebcb5dd2db.patch",
+		"nav-frontend-spinner@3.0.1": "patch:nav-frontend-spinner@npm%3A3.0.1#~/.yarn/patches/nav-frontend-spinner-npm-3.0.1-e8209cee75.patch",
+		"nav-frontend-tabs@2.0.3": "patch:nav-frontend-tabs@npm%3A2.0.3#~/.yarn/patches/nav-frontend-tabs-npm-2.0.3-3d1b6739cc.patch",
 		"nav-frontend-toggle": "patch:nav-frontend-toggle@npm%3A2.1.3#~/.yarn/patches/nav-frontend-toggle-npm-2.1.3-989fadd409.patch",
-		"nav-frontend-typografi@4.0.2": "patch:nav-frontend-typografi@npm%3A4.0.2#./.yarn/patches/nav-frontend-typografi-npm-4.0.2-67ec896090.patch",
-		"nav-datovelger@12.6.0": "patch:nav-datovelger@npm%3A12.6.0#./.yarn/patches/nav-datovelger-npm-12.6.0-36eb0faa79.patch"
+		"nav-frontend-typografi@4.0.2": "patch:nav-frontend-typografi@npm%3A4.0.2#~/.yarn/patches/nav-frontend-typografi-npm-4.0.2-67ec896090.patch",
+		"nav-datovelger@12.6.0": "patch:nav-datovelger@npm%3A12.6.0#~/.yarn/patches/nav-datovelger-npm-12.6.0-36eb0faa79.patch"
 	},
 	"scripts": {
 		"test": "jest --colors",
 		"dev-env-variables": "cross-env SOKEBOKS_NYE_KOER=enabled SAKSBEHANDLER_KAN_VELGE_NYE_KOER=enabled AVDELINGSLEDER_TILGANG_TIL_NYE_KOER=enabled K9_LOS_API_URL=http://localhost:8020/api",
-		"dev": "yarn dev-env-variables cross-env node webpack/webpack.dev.server.mjs --config webpack/webpack.dev.mjs",
+		"dev": "yarn dev-env-variables cross-env vite serve",
 		"build": "cross-env NODE_ENV=production SENTRY_RELEASE=$(git rev-parse --short HEAD) webpack --config webpack/webpack.prod.mjs",
 		"ts-check": "tsc --pretty --skipLibCheck",
 		"lint": "eslint --cache --fix \"src/**/*.ts?(x)\"",
