--- a/package.json
+++ b/package.json
@@ -108,11 +108,9 @@
 		"@storybook/addon-interactions": "8.6.14",
 		"@storybook/addon-links": "8.6.12",
 		"@storybook/addon-onboarding": "8.6.12",
-		"@storybook/addon-styling-webpack": "1.0.1",
-		"@storybook/addon-webpack5-compiler-swc": "2.1.0",
 		"@storybook/blocks": "8.6.14",
 		"@storybook/react": "8.6.12",
-		"@storybook/react-webpack5": "8.6.12",
+		"@storybook/react-vite": "8.6.14",
 		"@storybook/test": "8.6.14",
 		"@tanstack/react-query-devtools": "^5.79.0",
 		"@testing-library/dom": "10.4.0",
@@ -135,21 +133,15 @@
 		"autoprefixer": "10.4.21",
 		"babel-eslint": "10.1.0",
 		"babel-jest": "29.7.0",
-		"babel-loader": "9.2.1",
 		"babel-runtime": "6.26.0",
 		"chai": "5.2.0",
-		"circular-dependency-plugin": "5.2.2",
-		"copy-webpack-plugin": "12.0.2",
 		"cross-env": "7.0.3",
-		"css-loader": "7.1.2",
-		"css-minimizer-webpack-plugin": "7.0.2",
 		"dotenv": "16.5.0",
 		"eslint": "9.27.0",
 		"eslint-config-airbnb": "19.0.4",
 		"eslint-config-import": "0.13.0",
 		"eslint-config-prettier": "9.1.0",
 		"eslint-import-resolver-typescript": "3.10.1",
-		"eslint-import-resolver-webpack": "0.13.10",
 		"eslint-plugin-import": "2.31.0",
 		"eslint-plugin-jest": "28.12.0",
 		"eslint-plugin-jest-dom": "5.5.0",
@@ -158,7 +150,6 @@
 		"eslint-plugin-react-hooks": "5.2.0",
 		"eslint-plugin-storybook": "0.12.0",
 		"globals": "^15.15.0",
-		"html-webpack-plugin": "5.6.3",
 		"husky": "9.1.7",
 		"identity-obj-proxy": "3.0.0",
 		"jest": "29.7.0",
@@ -166,24 +157,14 @@
 		"jest-fixed-jsdom": "0.0.9",
 		"jest-transform-stub": "2.0.0",
 		"jsdom": "26.1.0",
-		"less": "4.3.0",
-		"less-loader": "12.3.0",
 		"lint-staged": "15.5.1",
-		"mini-css-extract-plugin": "2.9.2",
 		"msw": "2.8.6",
 		"postcss-less": "6.0.0",
-		"postcss-loader": "8.1.1",
 		"prettier": "3.5.3",
 		"prop-types": "15.8.1",
 		"storybook": "8.6.12",
-		"terser-webpack-plugin": "5.3.14",
-		"thread-loader": "4.0.4",
 		"typescript": "5.8.3",
-		"vite": "^6.3.5",
-		"webpack": "5.99.9",
-		"webpack-cli": "6.0.1",
-		"webpack-dev-server": "5.2.1",
-		"webpack-merge": "6.0.1"
+		"vite": "^6.3.5"
 	},
 	"resolutions": {
 		"nav-frontend-alertstriper@4.0.2": "patch:nav-frontend-alertstriper@npm%3A4.0.2#~/.yarn/patches/nav-frontend-alertstriper-npm-4.0.2-b212c92a4c.patch",
@@ -211,7 +192,7 @@
 		"test": "jest --colors",
 		"dev-env-variables": "cross-env SOKEBOKS_NYE_KOER=enabled SAKSBEHANDLER_KAN_VELGE_NYE_KOER=enabled AVDELINGSLEDER_TILGANG_TIL_NYE_KOER=enabled K9_LOS_API_URL=http://localhost:8020/api",
 		"dev": "yarn dev-env-variables cross-env vite serve",
-		"build": "cross-env NODE_ENV=production SENTRY_RELEASE=$(git rev-parse --short HEAD) webpack --config webpack/webpack.prod.mjs",
+		"build": "cross-env NODE_ENV=production SENTRY_RELEASE=$(git rev-parse --short HEAD) vite build",
 		"ts-check": "tsc --pretty --skipLibCheck",
 		"lint": "eslint --cache --fix \"src/**/*.ts?(x)\"",
 		"up": "docker-compose up -d --remove-orphans --build",
