--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
 		"@navikt/ft-plattform-komponenter": "^7.2.13",
 		"@popperjs/core": "2.11.8",
 		"@reach/combobox": "0.18.0",
-		"@sentry/browser": "8.55.0",
+		"@sentry/browser": "10.4.0",
 		"@sentry/cli": "2.50.0",
-		"@sentry/react": "8.55.0",
-		"@tanstack/react-query": "^5.83.0",
+		"@sentry/react": "10.4.0",
+		"@tanstack/react-query": "5.85.0",
 		"axios": "1.11.0",
 		"classnames": "2.5.1",
 		"dayjs": "1.11.13",
@@ -114,7 +114,7 @@
 		"@storybook/react": "8.6.14",
 		"@storybook/react-webpack5": "8.6.14",
 		"@storybook/test": "8.6.14",
-		"@tanstack/react-query-devtools": "^5.83.0",
+		"@tanstack/react-query-devtools": "5.85.0",
 		"@testing-library/dom": "10.4.0",
 		"@testing-library/jest-dom": "6.6.3",
 		"@testing-library/react": "16.3.0",
@@ -142,7 +142,7 @@
 		"cross-env": "7.0.3",
 		"css-loader": "7.1.2",
 		"css-minimizer-webpack-plugin": "7.0.2",
-		"dotenv": "16.6.1",
+		"dotenv": "17.2.1",
 		"eslint": "9.31.0",
 		"eslint-config-airbnb": "19.0.4",
 		"eslint-config-import": "0.13.0",
