--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
 		"nav-frontend-toggle-style": "2.1.2",
 		"nav-frontend-typografi": "4.0.2",
 		"nav-frontend-typografi-style": "2.0.2",
-		"postcss": "^8.5.6",
-		"postcss-import": "^16.1.1",
+		"postcss": "8.5.6",
+		"postcss-import": "16.1.1",
 		"query-string": "7.1.3",
 		"react": "19.1.0",
 		"react-collapse": "5.1.1",
@@ -100,10 +100,10 @@
 		"@babel/preset-typescript": "7.27.1",
 		"@babel/register": "7.27.1",
 		"@chromatic-com/storybook": "3.2.7",
-		"@eslint/compat": "^1.3.1",
+		"@eslint/compat": "1.3.2",
 		"@eslint/eslintrc": "^3.3.1",
-		"@eslint/js": "^9.31.0",
-		"@playwright/test": "1.54.1",
+		"@eslint/js": "9.33.0",
+		"@playwright/test": "1.54.2",
 		"@storybook/addon-essentials": "8.6.14",
 		"@storybook/addon-interactions": "8.6.14",
 		"@storybook/addon-links": "8.6.14",
@@ -115,18 +115,18 @@
 		"@storybook/react-webpack5": "8.6.14",
 		"@storybook/test": "8.6.14",
 		"@tanstack/react-query-devtools": "5.85.0",
-		"@testing-library/dom": "10.4.0",
-		"@testing-library/jest-dom": "6.6.3",
+		"@testing-library/dom": "10.4.1",
+		"@testing-library/jest-dom": "6.6.4",
 		"@testing-library/react": "16.3.0",
 		"@testing-library/user-event": "14.6.1",
 		"@trivago/prettier-plugin-sort-imports": "5.2.2",
 		"@types/chai": "5.2.2",
 		"@types/history": "5.0.0",
 		"@types/jest": "29.5.14",
-		"@types/lodash": "^4.17.20",
-		"@types/react": "19.1.8",
+		"@types/lodash": "4.17.20",
+		"@types/react": "19.1.10",
 		"@types/react-collapse": "5.0.4",
-		"@types/react-dom": "19.1.6",
+		"@types/react-dom": "19.1.7",
 		"@types/react-intl": "3.0.0",
 		"@types/react-redux": "7.1.34",
 		"@typescript-eslint/eslint-plugin": "8.38.0",
@@ -143,7 +143,7 @@
 		"css-loader": "7.1.2",
 		"css-minimizer-webpack-plugin": "7.0.2",
 		"dotenv": "17.2.1",
-		"eslint": "9.31.0",
+		"eslint": "9.33.0",
 		"eslint-config-airbnb": "19.0.4",
 		"eslint-config-import": "0.13.0",
 		"eslint-config-prettier": "9.1.2",
@@ -178,7 +178,7 @@
 		"terser-webpack-plugin": "5.3.14",
 		"thread-loader": "4.0.4",
 		"typescript": "5.9.2",
-		"webpack": "5.100.2",
+		"webpack": "5.101.1",
 		"webpack-cli": "6.0.1",
 		"webpack-dev-server": "5.2.2",
 		"webpack-merge": "6.0.1"
