--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
 		"@formatjs/intl-numberformat": "8.15.4",
 		"@grafana/faro-web-sdk": "1.19.0",
 		"@grafana/faro-web-tracing": "1.19.0",
-		"@navikt/aksel-icons": "7.25.1",
-		"@navikt/ds-css": "7.25.1",
-		"@navikt/ds-react": "7.25.1",
-		"@navikt/ds-tailwind": "7.25.1",
-		"@navikt/ds-tokens": "7.25.1",
+		"@navikt/aksel-icons": "7.28.0",
+		"@navikt/ds-css": "7.28.0",
+		"@navikt/ds-react": "7.28.0",
+		"@navikt/ds-tailwind": "7.28.0",
+		"@navikt/ds-tokens": "7.28.0",
 		"@navikt/familie-endringslogg": "14.0.2",
 		"@navikt/fnrvalidator": "2.1.5",
 		"@navikt/ft-form-hooks": "^6.3.13",
@@ -26,10 +26,10 @@
 		"@navikt/ft-plattform-komponenter": "^7.2.13",
 		"@popperjs/core": "2.11.8",
 		"@reach/combobox": "0.18.0",
-		"@sentry/browser": "8.55.0",
+		"@sentry/browser": "10.4.0",
 		"@sentry/cli": "2.50.0",
-		"@sentry/react": "8.55.0",
-		"@tanstack/react-query": "^5.83.0",
+		"@sentry/react": "10.4.0",
+		"@tanstack/react-query": "5.85.0",
 		"axios": "1.11.0",
 		"classnames": "2.5.1",
 		"dayjs": "1.11.13",
@@ -73,15 +73,15 @@
 		"nav-frontend-toggle-style": "2.1.2",
 		"nav-frontend-typografi": "4.0.2",
 		"nav-frontend-typografi-style": "2.0.2",
-		"postcss": "^8.5.6",
-		"postcss-import": "^16.1.1",
+		"postcss": "8.5.6",
+		"postcss-import": "16.1.1",
 		"query-string": "7.1.3",
 		"react": "19.1.0",
 		"react-collapse": "5.1.1",
 		"react-day-picker": "7.4.10",
 		"react-dom": "19.1.0",
 		"react-final-form": "6.5.9",
-		"react-hook-form": "7.60.0",
+		"react-hook-form": "7.62.0",
 		"react-idle-timer": "5.7.2",
 		"react-intl": "7.1.11",
 		"react-modal": "3.16.3",
@@ -100,10 +100,10 @@
 		"@babel/preset-typescript": "7.27.1",
 		"@babel/register": "7.27.1",
 		"@chromatic-com/storybook": "3.2.7",
-		"@eslint/compat": "^1.3.1",
+		"@eslint/compat": "1.3.2",
 		"@eslint/eslintrc": "^3.3.1",
-		"@eslint/js": "^9.31.0",
-		"@playwright/test": "1.54.1",
+		"@eslint/js": "9.33.0",
+		"@playwright/test": "1.54.2",
 		"@storybook/addon-essentials": "8.6.14",
 		"@storybook/addon-interactions": "8.6.14",
 		"@storybook/addon-links": "8.6.14",
@@ -114,19 +114,19 @@
 		"@storybook/react": "8.6.14",
 		"@storybook/react-webpack5": "8.6.14",
 		"@storybook/test": "8.6.14",
-		"@tanstack/react-query-devtools": "^5.83.0",
-		"@testing-library/dom": "10.4.0",
-		"@testing-library/jest-dom": "6.6.3",
+		"@tanstack/react-query-devtools": "5.85.0",
+		"@testing-library/dom": "10.4.1",
+		"@testing-library/jest-dom": "6.6.4",
 		"@testing-library/react": "16.3.0",
 		"@testing-library/user-event": "14.6.1",
 		"@trivago/prettier-plugin-sort-imports": "5.2.2",
 		"@types/chai": "5.2.2",
 		"@types/history": "5.0.0",
 		"@types/jest": "29.5.14",
-		"@types/lodash": "^4.17.20",
-		"@types/react": "19.1.8",
+		"@types/lodash": "4.17.20",
+		"@types/react": "19.1.10",
 		"@types/react-collapse": "5.0.4",
-		"@types/react-dom": "19.1.6",
+		"@types/react-dom": "19.1.7",
 		"@types/react-intl": "3.0.0",
 		"@types/react-redux": "7.1.34",
 		"@typescript-eslint/eslint-plugin": "8.38.0",
@@ -142,8 +142,8 @@
 		"cross-env": "7.0.3",
 		"css-loader": "7.1.2",
 		"css-minimizer-webpack-plugin": "7.0.2",
-		"dotenv": "16.6.1",
-		"eslint": "9.31.0",
+		"dotenv": "17.2.1",
+		"eslint": "9.33.0",
 		"eslint-config-airbnb": "19.0.4",
 		"eslint-config-import": "0.13.0",
 		"eslint-config-prettier": "9.1.2",
@@ -177,8 +177,8 @@
 		"storybook": "8.6.14",
 		"terser-webpack-plugin": "5.3.14",
 		"thread-loader": "4.0.4",
-		"typescript": "5.8.3",
-		"webpack": "5.100.2",
+		"typescript": "5.9.2",
+		"webpack": "5.101.1",
 		"webpack-cli": "6.0.1",
 		"webpack-dev-server": "5.2.2",
 		"webpack-merge": "6.0.1"
