--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
 		"react-intl": "7.1.11",
 		"react-modal": "3.16.3",
 		"react-popper": "2.3.0",
-		"react-router": "7.7.0",
+		"react-router": "7.8.0",
 		"tailwindcss": "3.4.17",
 		"uuid": "11.1.0"
 	},
@@ -156,7 +156,7 @@
 		"eslint-plugin-react": "7.37.5",
 		"eslint-plugin-react-hooks": "5.2.0",
 		"eslint-plugin-storybook": "0.12.0",
-		"globals": "^15.15.0",
+		"globals": "16.3.0",
 		"html-webpack-plugin": "5.6.4",
 		"husky": "9.1.7",
 		"identity-obj-proxy": "3.0.0",
