--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-	"recommendations": ["figma.figma-vscode-extension", "ms-playwright.playwright", "bradlc.vscode-tailwindcss"]
+	"recommendations": ["figma.figma-vscode-extension", "bradlc.vscode-tailwindcss"]
 }
