Ny workflow for deploy av slette_V1 branch

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build-and-deploy:
-    name: Build docker image and create issue
+    name: Build docker image
     runs-on: ubuntu-latest
     permissions:
       actions: read
