--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -81,11 +81,12 @@ jobs:
       id-token: write
       contents: read
       packages: read
-    uses: navikt/sif-gha-workflows/.github/workflows/verdikjede-test-v2.yml@main
+    uses: navikt/sif-gha-workflows/.github/workflows/verdikjede-test-v2.yml@playwright-speedup
     with:
       suites: 'frontend-los'
       tag: ${{ needs.build-and-deploy.outputs.image_version}}
       image_version: ${{ needs.build-and-deploy.outputs.image_version}}
+      k9-verdikjede-sha: 'playwright-container'
 
   compare-url-prod:
     name: Compare URL
