pakker må være minst 4 dager gamle for å dukke opp ved manuell oppdatering

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,11 +3,15 @@ compressionLevel: mixed
 enableGlobalCache: false
 enableScripts: false
 
+npmMinimalAgeGate: 5760
+npmPreapprovedPackages:
+  - '@navikt/*'
+
 nodeLinker: node-modules
 
 npmScopes:
   navikt:
     npmAlwaysAuth: true
-    npmRegistryServer: "https://npm.pkg.github.com"
+    npmRegistryServer: 'https://npm.pkg.github.com'
 
 yarnPath: .yarn/releases/yarn-4.6.0.cjs
