--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,13 +1,12 @@
 compressionLevel: mixed
-
 enableGlobalCache: false
 enableScripts: false
-
+npmMinimalAgeGate: 5760
+npmPreapprovedPackages:
+  - '@navikt/*'
 nodeLinker: node-modules
-
 npmScopes:
   navikt:
     npmAlwaysAuth: true
-    npmRegistryServer: "https://npm.pkg.github.com"
-
-yarnPath: .yarn/releases/yarn-4.6.0.cjs
+    npmRegistryServer: 'https://npm.pkg.github.com'
+yarnPath: .yarn/releases/yarn-4.12.0.cjs
