--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 	"repository": "https://github.com/navikt/k9-los-web",
 	"license": "MIT",
 	"dependencies": {
+		"@dnd-kit/core": "6.3.1",
+		"@dnd-kit/sortable": "10.0.0",
+		"@dnd-kit/utilities": "3.2.2",
 		"@grafana/faro-web-sdk": "1.19.0",
 		"@grafana/faro-web-tracing": "1.19.0",
 		"@navikt/aksel-icons": "7.38.0",
